# test_fast_api

./: Cargo.toml  README.md  gunicorn.conf.py  main.py  pyproject.toml
src/: lib.rs
